--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -171,8 +171,8 @@ table tr th { color: #688a7e;}
 
     max-width: 350px;
     margin: 150px auto 0;
-
-    background: #d5d7de;
+    border-radius: 1px;
+    background: #c6c6c7;
 
 }
 
@@ -213,25 +213,15 @@ table tr th { color: #688a7e;}
 .login-form h2.login-form-heading {
 
     margin: 0;
-
     padding:20px 15px;
-
     text-align: center;
-
     background: #34aadc;
-
     border-radius: 5px 5px 0 0;
-
     -webkit-border-radius: 5px 5px 0 0;
-
     color: #fff;
-
     font-size: 18px;
-
     text-transform: uppercase;
-
     font-weight: 300;
-
     font-family: 'Lato', sans-serif;
 
 }
@@ -298,9 +288,9 @@ table tr th { color: #688a7e;}
 
     font-size: 16px;
 
-    color: #8b9199;
+    color: #686969;
 
-    font-weight: normal;
+    font-weight: bold;
 
     line-height: 1;
 
@@ -317,11 +307,9 @@ table tr th { color: #688a7e;}
 .login-form input[type="text"], .login-form input[type="password"] {
 
     border: none;
-
     box-shadow: none;
-
-    font-size: 16px;
-
+    font-size: 18px;
+    font-weight: bold;
     border-radius: 0;
 
 }
